@@ -30,6 +30,7 @@ path = "src/main.rs"
 [dependencies]
 abcrypt = { version = "0.1.0", path = "../abcrypt" }
 anyhow = "1.0.75"
+byte-unit = { version = "4.0.19", default-features = false, features = ["std"] }
 clap = { version = "4.3.24", features = ["derive", "wrap_help"] }
 clap_complete = "4.3.2"
 clap_complete_nushell = "4.3.2"
